# Visual_Learning_Sorting

./: .gitignore  .mempalaceignore  CLAUDE.md  DEVLOG.md  NORTH_STAR.md  config.toml  entities.json  main.py  mempalace.yaml  pyproject.toml
.claude/: settings.local.json
TODO/: IMPLEMENTATION_TRACKER.md
assets/fonts/: README.md
docs/: 01_PRD.md  02_ARCHITECTURE.md  03_DATA_CONTRACTS.md  04_UI_SPEC.md  05_ALGORITHMS_VIS_SPEC.md  05_BEHAVIOR_SPEC.md  06_ACCEPTANCE_TESTS.md  06_BEHAVIOR_SPEC.md  07_ACCEPTANCE_TESTS.md  07_TEST_PLAN.md  08_DEV_ENV.md  08_TEST_PLAN.md  09_CI.md  09_DEV_ENV.md  10_ANIMATION_SPEC.md  10_CI.md  11_CI.md  AGENTS.md  AI_CONTEXT_HANDOFF_2.md  AI_CONTEXT_HANDOFF_3.md  Brick_3_Insertion_Sort.md  Brick_3_merge_sort.md  Brick_4_The_Grid_Manager.md  Brick_4_The_Panel.md  Brick_4_The_Theme.md  Brick_5_The_Controller.md  DECISIONS.md  PRD_bucket_sort_visualizer_v1.md  Sorting_Algorithm_Visualizer_Planning.md  agentic_prompt_draft.md  brick_3_selection_sort.md  bucket_sort_visualizer_design_v3.md
docs/AGENT_PROMPTS/: IMPLEMENTER.md  QA.md  REVIEWER.md  UI.md
docs/AI_Conversations/: 2026-03-16_doc_review_and_ui_mocks.md  2026-03-16_spec_updates_for_implementation.md  2026-03-21-claude-supplementary-prompts.md  2026-03-21-gemini-recommendations.md  2026-03-21-session-summary-spec-gaps.md  2026-03-21_review_claude_additional_traps.md  2026-03-21_review_gemini.md  2026-03-22-animation-agent-strategy.md  2026-04-05-animation-contract-review-summary.md  2026-04-23_project_gap_review.md  2026-Mar-21_gap_conversation_1.md
docs/Archive/: AI_CONTEXT_HANDOFF_1.md  PRD_bucket_sort_visualizer_v1_1_codex_ready.md  Sorting_Algorithm_Visualizer_Planning.md  agentic_prompt_draft.md  project_review_1_chatgpt.md
docs/Comments/: chatgpt_review_Feb_27.md  chatgpt_view_mar_08.md  review_1_claude.md
docs/Reference/: Bubble_Sort_Video_Reference_Write-Up.md  Heap_Sort_Video_Reference.md  Insertion_Sort_Video_Reference.md  Selection_Sort_Video_Reference.md
docs/contracts/: BUBBLE_SORT_ANIMATION.md  HEAP_SORT_ANIMATION.md  INSERTION_SORT_ANIMATION.md  SELECTION_SORT_ANIMATION.md
docs/design_docs/: 00_PSEUDOCODE.md  01_PRD.md  02_ARCHITECTURE.md  03_DATA_CONTRACTS.md  04_UI_SPEC.md  05_ALGORITHMS_VIS_SPEC.md  06_BEHAVIOR_SPEC.md  07_ACCEPTANCE_TESTS.md  08_TEST_PLAN.md  09_DEV_ENV.md  10_ANIMATION_SPEC.md  12_ANIMATION_FOUNDATION.md  13_IMPLEMENTATION_ORDER.md  14_CONTEXT_PACKS.md  DECISIONS.md
docs/devlog/: phase_00_01.md  phase_02.md  (+1 more)
scripts/: fetch_fonts.sh  project_context.py  smoke_bubble.py  smoke_heap.py  smoke_insertion.py  smoke_selection.py
tests/: conftest.py
(+25 files in other folders)
