[project]
name = "visual-learning-sorting"
version = "0.1.0"
description = "Sorting Algorithm Visualizer — four algorithms race side-by-side in a 2x2 Pygame panel grid."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Steven" }]
license = { text = "Proprietary" }

dependencies = [
    "pygame>=2.5",
]

[project.scripts]
visual-sort = "visualizer.main:main"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pyright>=1.1.370",
    "pytest>=8.0",
]

# ---------------------------------------------------------------------------
# Build system — src-layout per D-080
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visualizer"]

# ---------------------------------------------------------------------------
# Pytest — markers per 08_TEST_PLAN.md §4.3
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "unit: Pure model/math tests — no Pygame subsystem needed beyond session init",
    "integration: Controller/View interaction tests — require headless Pygame session",
    "slow: Tests with large fixtures or exhaustive generator consumption",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pyright — strict type checking
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
